[package]
authors = ['l.tk <laurent.turek@gmail.com>']
description = 'Chainlink Price Feed Pallet for Substrate Chains'
edition = '2018'
homepage = 'https://github.com/LaurentTrk/pricefeed-polkadot'
license = 'Unlicense'
name = 'pallet-chainlink-pricefeed'
repository = 'https://github.com/LaurentTrk/pricefeed-polkadot'
version = "2.0.0-rc6"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.chainlink]
default_features = false
path = '../pallet-chainlink'
package = 'pallet-chainlink'

[dependencies.sp-std]
version = "2.0.0-rc6"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.hex-literal]
version = '0.3.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'chainlink/std',
]
