[package]
name = "pallet-chainlink"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
log = "0.4.0"
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
balances = { default-features = false, version = '2.0.0', package = "pallet-balances" }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'sp-std/std',
	'balances/std',
]
