[package]
authors = ['l.tk <https://github.com/LaurentTrk>']
description = 'Loan Pallet for Ki.Dot'
edition = '2018'
homepage = 'https://ki.dot.ltk.codes'
license = 'Unlicense'
name = 'kidot-loan'
repository = 'https://github.com/LaurentTrk/ki.dot/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
log = "0.4.0"
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
balances = { default-features = false, version = '2.0.0', package = "pallet-balances" }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[dependencies.pricefeed]
default-features = false
package = 'pallet-chainlink-pricefeed'
path = '../../../pallet-chainlink-pricefeed'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'pricefeed/std',
    'balances/std',
]
